Product page bugs fixed on mobile

--- a/styles/_product.scss
+++ b/styles/_product.scss
@@ -128,6 +128,13 @@
                             margin: 16px 0 10px 0;
                         }
                     }
+                    .product-info-block{
+                        margin-top: -22px;
+                        color: #676869;
+                        a{
+                            text-decoration: none;
+                        }
+                    }
                 }
                 .chill_holiday_sale_text{
                     border-radius: 4rem;
@@ -533,7 +540,7 @@
 
 .metafield-gummies-img-mobile{
     display: none !important;
-    @media screen and (max-width:768px){
+    @media screen and (max-width: 699px){
         display:block !important;
         .slider_image_wrapper_mobile{
             display: flex;
@@ -579,19 +586,25 @@
         text-align: center;
     }
         .desktop-recycle-img{
-        @media screen and (max-width:768px){
+        @media screen and (max-width:699px){
             display:none;
         }}
             .gummies-button{
                 @media screen and (max-width:920px){
                     font-size:12px;    
                 }
-                @media screen and (min-width:768px){
+                @media screen and (min-width:700px){
                     position: absolute;
                     top: 74%;
                     left:10%;
                 }
-                @media screen and (max-width:769px){
+                @media (max-width: 699px){
+                    width: 90%;
+                    font-size: 16px !important;
+                    font-weight: 700;
+                    margin-top: 0 !important;
+                }
+                @media screen and (max-width:699px){
                     position: relative;
                     font-weight: 700;   
                     margin: 36px auto 0px ; 
@@ -689,7 +702,7 @@
         }
         
         ul {
-            margin: 35px 0 !important;
+            margin: 30px 0 !important;
             padding: 0;
             display: flex;
             justify-content: center;
@@ -1021,7 +1034,7 @@
 
 .metafield-gummies-img-mobile{
     display: none;
-    @media screen and (max-width:768px){
+    @media screen and (max-width:699px){
         display:block;
     }
 }
@@ -1029,11 +1042,11 @@
 .metafield-gummies-img{
     margin-bottom: -6px;
     position: relative;
-    @media screen and (max-width:768px){
+    @media screen and (max-width:699px){
         text-align: center;
     }
     .desktop-recycle-img{
-        @media screen and (max-width:768px){
+        @media screen and (max-width:699px){
             display:none;
         }
     }
@@ -1046,7 +1059,7 @@
             top: 74%;
             left:10%;
         }
-        @media screen and (max-width:769px){
+        @media screen and (max-width:699px){
             position: relative;
             font-weight: 700;
             margin: 18px auto 28px;
